--- a/assets/main_styles.css
+++ b/assets/main_styles.css
@@ -1,12 +1,10 @@
 /* original style sheet -- este es el que vale */
 
 body {
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial,
+  font-family: "Century Gothic", "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial,
     sans-serif;
   font-size: 1.5rem;
   font-weight: 400;
-  width: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
   line-height: 1.2;
@@ -15,23 +13,37 @@ body {
 .page {
   position: relative;
   padding: 0;
-  /*margin: 4px auto;*/
-  border-radius: 5px;
+  margin: 4px auto;
+  border-radius: 10px;
   background: whitesmoke;
-  box-shadow: 0 0 10px lightgrey;
+  box-shadow: 0 0 15px lightgrey;
   z-index: 0;
+  align-content: center;
 }
 
 .text-align-center{
   text-align: center;
+  /*align-content: center;*/
 }
+
+.text-align-right{
+  text-align: right;
+}
+
+.max-size{
+  max-width: 400px;
+}
+
 
 .line-height-2 {
   line-height: 2;
 }
 
 .margin-10px {
-  margin: 10px;
+  /*margin: 5px;*/
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 5px;
 }
 
 .card {
@@ -70,6 +82,12 @@ a:active {
 
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 */
+.title {
+  text-align: center;
+
+}
+
+
 .tab {
   border-style: solid;
   border-color: rgba(0, 0, 0, 0.2);
