Cambios para registrar la parte de cambiar la contraseña

--- a/assets/main_styles.css
+++ b/assets/main_styles.css
@@ -26,6 +26,11 @@ body {
   /*align-content: center;*/
 }
 
+.align-content-center{
+  align-content: center;
+
+}
+
 .text-align-right{
   text-align: right;
 }
